// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexPack renders 0 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: 0;
  -ms-flex-pack: 0;
  flex-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: 0;
  -ms-flex-pack: 0;
  flex-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: 0;
  -ms-flex-pack: 0;
  flex-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: 0;
  -ms-flex-pack: 0;
  flex-pack: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders function 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: hasnot;
  -ms-flex-pack: hasnot;
  flex-pack: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: has;
  -ms-flex-pack: has;
  flex-pack: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: hasnot;
  -ms-flex-pack: hasnot;
  flex-pack: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: has;
  -ms-flex-pack: has;
  flex-pack: has;
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  flex-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  flex-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  flex-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: invalid.path.1;
  -ms-flex-pack: invalid.path.1;
  flex-pack: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders negative number 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: -54881;
  -ms-flex-pack: -54881;
  flex-pack: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: -54881;
  -ms-flex-pack: -54881;
  flex-pack: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: -42365;
  -ms-flex-pack: -42365;
  flex-pack: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: -42365;
  -ms-flex-pack: -42365;
  flex-pack: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: July;
    -ms-flex-pack: July;
    flex-pack: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: August;
    -ms-flex-pack: August;
    flex-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: September;
    -ms-flex-pack: September;
    flex-pack: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-pack: November;
    -ms-flex-pack: November;
    flex-pack: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: July;
    -ms-flex-pack: July;
    flex-pack: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: August;
    -ms-flex-pack: August;
    flex-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: September;
    -ms-flex-pack: September;
    flex-pack: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-pack: November;
    -ms-flex-pack: November;
    flex-pack: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: May;
    -ms-flex-pack: May;
    flex-pack: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: June;
    -ms-flex-pack: June;
    flex-pack: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: April;
    -ms-flex-pack: April;
    flex-pack: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-pack: November;
    -ms-flex-pack: November;
    flex-pack: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: May;
    -ms-flex-pack: May;
    flex-pack: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: June;
    -ms-flex-pack: June;
    flex-pack: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-pack: April;
    -ms-flex-pack: April;
    flex-pack: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-pack: November;
    -ms-flex-pack: November;
    flex-pack: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-flex-pack: July;
    -ms-flex-pack: July;
    flex-pack: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: August;
    -ms-flex-pack: August;
    flex-pack: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-pack: September;
    -ms-flex-pack: September;
    flex-pack: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: November;
    -ms-flex-pack: November;
    flex-pack: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-pack: August;
    -ms-flex-pack: August;
    flex-pack: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-flex-pack: July;
    -ms-flex-pack: July;
    flex-pack: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: August;
    -ms-flex-pack: August;
    flex-pack: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-pack: September;
    -ms-flex-pack: September;
    flex-pack: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: November;
    -ms-flex-pack: November;
    flex-pack: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-pack: August;
    -ms-flex-pack: August;
    flex-pack: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-pack: January;
    -ms-flex-pack: January;
    flex-pack: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: December;
    -ms-flex-pack: December;
    flex-pack: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-pack: April;
    -ms-flex-pack: April;
    flex-pack: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: May;
    -ms-flex-pack: May;
    flex-pack: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-pack: June;
    -ms-flex-pack: June;
    flex-pack: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-pack: January;
    -ms-flex-pack: January;
    flex-pack: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: December;
    -ms-flex-pack: December;
    flex-pack: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-pack: April;
    -ms-flex-pack: April;
    flex-pack: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-pack: May;
    -ms-flex-pack: May;
    flex-pack: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-pack: June;
    -ms-flex-pack: June;
    flex-pack: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: 54881;
  -ms-flex-pack: 54881;
  flex-pack: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: 54881;
  -ms-flex-pack: 54881;
  flex-pack: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: 42365;
  -ms-flex-pack: 42365;
  flex-pack: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: 42365;
  -ms-flex-pack: 42365;
  flex-pack: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders string 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: July;
  -ms-flex-pack: July;
  flex-pack: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: July;
  -ms-flex-pack: July;
  flex-pack: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: June;
  -ms-flex-pack: June;
  flex-pack: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: June;
  -ms-flex-pack: June;
  flex-pack: June;
}

<div
    className="c0"
  />,
]
`;

exports[`flexPack renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-pack: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  flex-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  flex-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  flex-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-pack: DarkSlateBlue;
  -ms-flex-pack: DarkSlateBlue;
  flex-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
